# numedy-test

./: .dockerignore  .env.docker  .gitignore  Dockerfile  create_env.py  docker-compose.yml  manage.py  pyproject.toml  readme.md  requirements.txt
app/: admin.py  models.py  urls.py  views.py
app/fixtures/: initial_data.json
app/management/commands/: clear_database.py  create_database.py  data.py
app/migrations/: 0001_initial.py
app/templates/: frequency.html  index.html  report.html
numedy/: asgi.py  settings.py  urls.py  wsgi.py
